Setting gitignore to ignore untracked flutter stuffs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Untracked flutter stuffs
+.dart_tool
+.idea
+android
+build
+ios
+.packages
+eduserveMinimal.iml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
