README and sharinglink key in config

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "username": "urk19cs2017",
-    "password": "accesseduserve"
+    "password": "accesseduserve",
+    "sharingLink": "# Your sharing link"
 }
