--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "username": "urk19cs2017",
-    "password": "accesseduserve",
+    "username": "your register number",
+    "password": "yourpassword",
     "stars": 5,
     "sharingLink": "# Your sharing link"
 }
