--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   http: ^0.12.2
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.12+4
+  beautifulsoup: ^0.0.1
+  requests: ^3.3.0
+  html: ^0.13.3+3
+  dio: ^3.0.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
