--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   html: ^0.13.3+3
   google_fonts: ^1.1.1
   font_awesome_flutter: ^8.11.0
+  path_provider: ^1.6.24
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
