--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   path_provider: ^1.6.24
   auto_size_text: ^2.1.0
+  intl: ^0.16.1
+  connectivity: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
