--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   auto_size_text: ^2.1.0
   intl: ^0.16.1
   connectivity: ^2.0.2
+  dynamic_theme: ^1.0.0
+  firebase_core: ^0.5.3
+  firebase_analytics: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
