--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dynamic_theme: ^1.0.0
   firebase_core: ^0.5.3
   firebase_analytics: ^6.3.0
+  firebase_performance: ^0.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
