--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: eduserveMinimal
-logo: https://github.com/hiruthicShaSS/eduserveMinimal/blob/main/assets/appIcon.png
+logo: https://raw.githubusercontent.com/hiruthicShaSS/eduserveMinimal/main/assets/appIcon.png
 description: Something that is responsive
 show_downloads: true
 google_analytics:
