--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,20 +24,23 @@ dependencies:
   flutter:
     sdk: flutter
 
-  hexcolor: ^1.0.6
-  url_launcher: ^5.7.10
-  fluttertoast: ^7.1.5
-  http: ^0.12.2
-  flutter_spinkit: ^4.1.2
-  shared_preferences: ^0.5.12+4
-  lottie: ^0.7.0+1
+  google_fonts: ^2.1.0
+  auto_size_text: ^3.0.0-nullsafety.0
+  intl: ^0.17.0
+  font_awesome_flutter: ^9.1.0
+  lottie: ^1.1.0
+  fluttertoast: ^8.0.8
+  flutter_spinkit: ^5.0.0
+  hexcolor: ^2.0.4
+  flutter_rating_bar: ^4.0.0
+
+  http: ^0.13.3
+  url_launcher: ^6.0.9
+  connectivity: ^3.0.6
+  shared_preferences: ^2.0.6
+  path_provider: ^2.0.2
   beautifulsoup: ^0.0.1
-  google_fonts: ^1.1.1
-  font_awesome_flutter: ^8.11.0
-  path_provider: ^1.6.24
-  auto_size_text: ^2.1.0
-  intl: ^0.16.1
-  connectivity: ^2.0.2
+  provider: ^5.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,6 +50,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  import_sorter: ^4.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
