--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,16 @@ dependencies:
   connectivity: ^3.0.6
   shared_preferences: ^2.0.6
   path_provider: ^2.0.2
-  beautifulsoup: ^0.0.1
+  # beautifulsoup: ^0.0.1
   provider: ^6.0.1
   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+  beautifulsoup:
+    path: beautifulsoup.dart
 
 dev_dependencies:
   flutter_test:
