Sentry logging added, eager data fetching implemented and Ui refactored

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   url_launcher: ^6.0.9
   connectivity: ^3.0.6
   shared_preferences: ^2.0.6
-  path_provider: ^2.0.2
   # beautifulsoup: ^0.0.1
   provider: ^6.0.1
+  sentry_flutter: ^6.0.1
   
 
   # The following adds the Cupertino Icons font to your application.
