--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # beautifulsoup: ^0.0.1
   provider: ^6.0.1
   sentry_flutter: ^6.0.1
+  shimmer: ^2.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
