--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.1
   sentry_flutter: ^6.0.1
   shimmer: ^2.0.0
+  new_version: ^0.2.3
   
 
   # The following adds the Cupertino Icons font to your application.
