--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fluttertoast: ^8.0.8
   flutter_spinkit: ^5.0.0
   flutter_rating_bar: ^4.0.0
+  fl_chart: ^0.40.2
 
   http: ^0.13.3
   url_launcher: ^6.0.9
