--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.2+6
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -25,14 +25,15 @@ dependencies:
     sdk: flutter
 
   google_fonts: ^2.1.0
+  font_awesome_flutter: ^9.1.0
   auto_size_text: ^3.0.0-nullsafety.0
   intl: ^0.17.0
-  font_awesome_flutter: ^9.1.0
   lottie: ^1.1.0
   fluttertoast: ^8.0.8
   flutter_spinkit: ^5.0.0
   flutter_rating_bar: ^4.0.0
   fl_chart: ^0.40.2
+  shimmer: ^2.0.0
 
   http: ^0.13.3
   url_launcher: ^6.0.9
@@ -40,8 +41,8 @@ dependencies:
   shared_preferences: ^2.0.6
   provider: ^6.0.1
   sentry_flutter: ^6.0.1
-  shimmer: ^2.0.0
   new_version: ^0.2.3
+  quick_actions: ^0.6.0+8
   
 
   # The following adds the Cupertino Icons font to your application.
