--- a/.github/workflows/virustotal.yml
+++ b/.github/workflows/virustotal.yml
@@ -27,10 +27,10 @@ jobs:
           flutter upgrade
           git submodule update --init --recursive
           flutter pub get
-          flutter build apk --target lib/main_production.dart --flavor production --split-per-abi
+          flutter build apk --debug --target lib/main_production.dart --flavor production
       
       - name: Upload and get results
         run: |
-          curl --request POST --url https://www.virustotal.com/api/v3/files --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header "Accept: application/json" --header "Content-Type: multipart/form-data" -F "file=@build/app/outputs/apk/production/release/app-production-release.apk"
+          curl --request POST --url https://www.virustotal.com/api/v3/files --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header "Accept: application/json" --header "Content-Type: multipart/form-data" -F "file=@build/app/outputs/apk/production/release/app-production-debug.apk"
           sha256sum build/app/outputs/apk/production/release/app-production-release.apk | hash.txt
           curl --request GET --url https://www.virustotal.com/api/v3/files/$(cat hash.txt) --header "x-apikey: $VIRUS_TOTAL_API_KEY"
