--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   assets:
     - assets/
     - assets/lottie/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
