--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,10 @@ if (keystorePropertiesFile.exists()) {
 android {
     compileSdkVersion flutter.compileSdkVersion
 
+    lintOptions {
+      checkReleaseBuilds false
+    } 
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
