--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sentry_flutter: ^6.0.1
   new_version: ^0.2.3
   quick_actions: ^0.6.0+8
+  syncfusion_flutter_barcodes: ^19.4.56
   
 
   # The following adds the Cupertino Icons font to your application.
