--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.9
   connectivity: ^3.0.6
   shared_preferences: ^2.0.6
+  flutter_secure_storage: ^5.0.2
   provider: ^6.0.1
   sentry_flutter: ^6.0.1
   new_version: ^0.2.3
