--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.4+11
+version: 1.2.5+12
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -46,6 +46,7 @@ dependencies:
   quick_actions: ^0.6.0+8
   syncfusion_flutter_barcodes: ^19.4.56
   table_sticky_headers: ^2.0.0
+  in_app_review: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
