--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   syncfusion_flutter_barcodes: ^20.1.57
   table_sticky_headers: ^2.0.0
   in_app_review: ^2.0.4
+  awesome_notifications: ^0.6.21
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
