--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.0
   google_fonts: ^3.0.1
   font_awesome_flutter: ^10.1.0
   auto_size_text: ^3.0.0-nullsafety.0
@@ -48,15 +49,13 @@ dependencies:
   table_sticky_headers: ^2.0.0
   in_app_review: ^2.0.4
   awesome_notifications: ^0.6.21
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  package_info: ^2.0.2
+  flutter_svg: ^1.0.3
 
   beautifulsoup:
     path: beautifulsoup.dart
-  package_info: ^2.0.2
-  flutter_svg: ^1.0.3
+  flutter_background_service:
+    path: D:/projects/flutter_forked_packages/flutter_background_service/packages/flutter_background_service
 
 dev_dependencies:
   flutter_test:
