--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,58 +15,56 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.9-hotfix-2+22
+version: 1.3.9-hotfix-3+23
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  cupertino_icons: ^1.0.0
-  google_fonts: ^3.0.1
-  font_awesome_flutter: ^10.1.0
   auto_size_text: ^3.0.0-nullsafety.0
-  intl: ^0.17.0
-  lottie: ^1.1.0
-  fluttertoast: ^8.0.8
-  flutter_spinkit: ^5.0.0
-  flutter_rating_bar: ^4.0.0
-  fl_chart: ^0.50.6
-  shimmer: ^2.0.0
-
-  http: ^0.13.3
-  url_launcher: ^6.0.9
-  connectivity: ^3.0.6
-  shared_preferences: ^2.0.6
-  flutter_secure_storage: ^5.0.2
-  provider: ^6.0.1
-  sentry_flutter: ^6.0.1
-  new_version: ^0.3.0
-  quick_actions: ^0.6.0+8
-  syncfusion_flutter_barcodes: ^20.1.57
-  table_sticky_headers: ^2.0.0
-  in_app_review: ^2.0.4
   awesome_notifications: ^0.6.21
-  package_info: ^2.0.2
-  flutter_svg: ^1.0.3
-  webview_flutter: ^3.0.4
-  flutter_background_service: any
-
   beautifulsoup:
     path: beautifulsoup.dart
+  connectivity: ^3.0.6
+  cupertino_icons: ^1.0.0
+  fl_chart: ^0.50.6
+  flutter:
+    sdk: flutter
+  flutter_background_service: any
+  flutter_rating_bar: ^4.0.0
+  flutter_secure_storage: ^5.0.2
+  flutter_spinkit: ^5.0.0
+  flutter_svg: ^1.0.3
+  fluttertoast: ^8.0.8
+  font_awesome_flutter: ^10.1.0
+  google_fonts: ^3.0.1
+  http: ^0.13.3
+  in_app_review: ^2.0.4
+  intl: ^0.17.0
+  lottie: ^1.1.0
+  new_version: ^0.3.0
+  package_info: ^2.0.2
+  path_provider: ^2.0.11
+  provider: ^6.0.1
+  quick_actions: ^0.6.0+8
+  sentry_flutter: ^6.0.1
+  share_plus: ^4.0.10
+  shared_preferences: ^2.0.6
+  shimmer: ^2.0.0
+  syncfusion_flutter_barcodes: ^20.1.57
+  table_sticky_headers: ^2.0.0
+  url_launcher: ^6.0.9
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
   import_sorter: ^4.6.0
-  flutter_launcher_icons: ^0.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -83,10 +81,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -95,6 +91,5 @@ flutter:
     - family: Valorant
       fonts:
         - asset: assets/fonts/Valorant.ttf
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
