--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Program Files/Java/jdk-11.0.12
+java.home=C\:/Program Files/Eclipse Adoptium/jdk-17.0.3.7-hotspot
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
